traewelling-exporter/exporter.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: traewelling-exporter
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: traewelling-exporter
  namespace: traewelling-exporter
  labels:
    app.kubernetes.io/name: traewelling-exporter
spec:
  selector:
    matchLabels:
      app.kubernetes.io/name: traewelling-exporter
  template:
    metadata:
      labels:
        app.kubernetes.io/name: traewelling-exporter
    spec:
      containers:
        - name: traewelling-exporter
          image: ghcr.io/nycodeghg/traewelling-exporter/exporter:0.1.3
          ports:
            - containerPort: 3000
              name: metrics
              protocol: TCP
          livenessProbe:
            httpGet:
              port: metrics
              scheme: HTTP
              path: /metrics
          readinessProbe:
            httpGet:
              port: metrics
              scheme: HTTP
              path: /metrics
---
apiVersion: v1
kind: Service
metadata:
  name: traewelling-exporter
  namespace: traewelling-exporter
  labels:
    app.kubernetes.io/name: traewelling-exporter
spec:
  selector:
    app.kubernetes.io/name: traewelling-exporter
  ports:
    - name: metrics
      protocol: TCP
      port: 80
      targetPort: 3000
